<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/fl_root"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.netease.lava.nertc.sdk.video.NERtcVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_live_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/down_arrow_white" />

        <ImageView
            android:id="@+id/iv_camera_switch"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/camera_flip_white" />

        <RelativeLayout
            android:id="@+id/rly_live_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_back"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/dark_rectangle_bg"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_12">

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="@dimen/dp_64"
                android:layout_height="@dimen/dp_64"
                android:layout_marginRight="@dimen/dp_12" />

            <ImageView
                android:id="@+id/iv_refresh_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/iv_cover"
                android:src="@drawable/refresh_solid_icon"/>


            <EditText
                android:id="@+id/edt_live_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/colorWhite"
                android:background="@null"
                android:maxLength="20"
                android:layout_toRightOf="@+id/iv_cover" />

            <ImageView
                android:id="@+id/iv_dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/iv_cover"
                android:src="@drawable/random_icon" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lly_filter"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:background="@drawable/dark_rectangle_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:src="@drawable/warn_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_user_warning"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_filter"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_live"
            android:background="@drawable/dark_cycle_bg"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/filter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/colorWhite"
                android:text="@string/filter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_beauty"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            app:layout_constraintRight_toLeftOf="@+id/lly_filter"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_live"
            android:background="@drawable/dark_cycle_bg"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_40"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/beauty_on" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/colorWhite"
                android:text="@string/beauty" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_setting"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            app:layout_constraintLeft_toRightOf="@+id/lly_filter"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_live"
            android:background="@drawable/dark_cycle_bg"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/colorWhite"
                android:text="@string/setting" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_start_live"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/start_new_live"
            android:background="@drawable/live_start_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_anchor_info"
        android:layout_width="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="match_parent">

        <com.netease.biz_live.yunxin.live.ui.widget.PKControlView
            android:id="@+id/pk_control_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include_room_top"
            layout="@layout/view_include_room_top"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <LinearLayout
            android:id="@+id/lly_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_12"
            app:layout_constraintTop_toBottomOf="@+id/iv_anchor_portrait"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/shape_chat_room_input_bg"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_14"
                android:padding="@dimen/dp_4"
                android:paddingStart="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                android:text="取消"
                android:background="@drawable/pk_button_bg" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_msg_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@id/pk_control_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_room_msg_input"
            app:layout_constraintStart_toStartOf="parent">

            <com.netease.biz_live.yunxin.live.ui.widget.ChatRoomMsgRecyclerView
                android:id="@+id/crv_msg_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:overScrollMode="never" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_room_msg_input"
            android:layout_width="175dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/shape_chat_room_input_bg"
            android:gravity="center_vertical"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:text="说点什么..."
            android:textColor="#ccffffff"
            android:textSize="14dp"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lly_control"
            app:drawableStartCompat="@drawable/icon_chat_msg_input" />

        <LinearLayout
            android:id="@+id/lly_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_room_msg_input"
            app:layout_constraintStart_toEndOf="@+id/tv_room_msg_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="@dimen/dp_10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/beauty_white"
                android:background="@drawable/dark_cycle_bg" />

            <ImageView
                android:id="@+id/iv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/filter"
                android:background="@drawable/dark_cycle_bg" />

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/music"
                android:background="@drawable/dark_cycle_bg" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@drawable/more"
                android:background="@drawable/dark_cycle_bg" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_room_msg_input"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ff000000"
            android:gravity="center_vertical"
            android:hint="说点什么..."
            android:singleLine="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#ccffffff"
            android:textSize="14dp"
            android:imeOptions="actionSend"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/iv_request_pk"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/fl_msg_group"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icon_pk"
            android:layout_marginRight="@dimen/dp_10" />

        <LinearLayout
            android:id="@+id/lly_pk_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/shape_chat_room_input_bg"
            android:gravity="center_vertical">

            <ProgressBar
                android:id="@+id/pk_progress"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/colorWhite"
                android:text="PK连线中…" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
